@@ -1,3 +1,13 @@
+2011-10-25  Yuqiang Xian  <yuqiang.xian@intel.com>
+
+        Add missing DFG file entries to the make lists for GTK and Qt ports
+        https://bugs.webkit.org/show_bug.cgi?id=70806
+
+        Reviewed by Darin Adler.
+
+        * GNUmakefile.list.am:
+        * JavaScriptCore.pro:
+
 2011-10-25  Mark Hahnenberg  <mhahnenberg@apple.com>
 
         Add getOwnPropertySlot to MethodTable
